0.2.8 后端删除模板，删除设备。测试完成